src/snapshots/lakonik__engine__tests__parse_statement_snapshot@qwen3_create_$(echo_"helloworld"_|_grep_world).snap
---
source: src/engine.rs
expression: simplified_result
---
attachments: []
prompt: "create for me a(n) \n\nCommand: echo \"hello\nworld\" | grep world\nOutput:\nworld\n\n"
