src/snapshots/lakonik__engine__tests__parse_statement_snapshot@qwen3_create_$(expr_5_-_3).snap
---
source: src/engine.rs
expression: simplified_result
---
attachments: []
prompt: "create for me a(n) \n\nCommand: expr 5 - 3\nOutput:\n2\n\n"
