src/snapshots/lakonik__engine__tests__parse_statement_snapshot@qwen3_create_bar_$(expr_2_+_3).snap
---
source: src/engine.rs
expression: simplified_result
---
attachments: []
prompt: "create for me a(n) bar \n\nCommand: expr 2 + 3\nOutput:\n5\n\n"
