src/snapshots/lakonik__engine__tests__parse_statement_snapshot@robot_~testverbdeleteme1=(test_template_delete_me:_)_$(expr_5_-_3).snap
---
source: src/engine.rs
expression: simplified_result
---
attachments: []
prompt: "test template delete me:  \n\nCommand: expr 5 - 3\nOutput:\n2\n\n"
